[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-tracker"
version = "0.1.0"
description = "Query Shodan for geographic distribution of public OpenClaw instances"
requires-python = ">=3.11"
dependencies = [
    "shodan>=1.31.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pycountry>=24.6.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
openclaw-tracker = "openclaw_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
